# polysnake

./: .gitignore  ffunc.f90  func.cpp  func.rs  main.cpp  main.py  meson.build  polysnake.c  readme.md
